<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--region Header-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="168dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_detikcom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toStartOf="@id/cdv_photo"
        app:layout_constraintTop_toTopOf="@id/img_logo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cdv_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/img_news2"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_logo"/>
    <!--endregion-->

    <!--region Menu Top-->
    <!--endregion-->

    <!--region Berita-->
    <LinearLayout
        android:id="@+id/lay_MenuTop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/text_terbaru"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/text_berita_utama"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="antarkansemangat"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="most_popular"
            android:textColor="@color/colorPrimaryDark" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_MenuTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cdv_newsheadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_news0"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:contentDescription="contdesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_news9">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimaryDark"
                    android:padding="13dp">

                    <TextView
                        android:id="@+id/tvw_TitleHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="contdesc"
                        android:text="@string/text_judul_headline"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvw_DescHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="contdesc"
                        android:text="@string/text_deskripsi_headline"
                        android:textColor="@android:color/white"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_daftarberita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cdv_newsheadline"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <!--endregion-->

    <!--region Bot Nav-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv_menubottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:itemTextColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom"/>
    <!--endregion-->



</androidx.constraintlayout.widget.ConstraintLayout>